# fcitx-table-latex-nix-src

./: README
icons/: CMakeLists.txt
po/: fcitx-table-other.pot
tables/: CMakeLists.txt
tables/other/: latex.conf.in  latex.txt
